--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,13 @@
+3==0.0.0
 asgiref==3.4.1
 beautifulsoup4==4.10.0
 dj-database-url==0.5.0
 Django==3.2.7
+django-bootstrap==0.2.4
+django-bootstrap-v5==1.0.5
+django-bootstrap3==15.0.0
 django-bootstrap5==2.1.2
+importlib-metadata==3.10.1
 Pillow==8.3.2
 psycopg2==2.9.1
 python-decouple==3.5
@@ -10,3 +15,4 @@ pytz==2021.1
 soupsieve==2.2.1
 sqlparse==0.4.2
 typing-extensions==3.10.0.2
+zipp==3.6.0
